--- a/css/index.css
+++ b/css/index.css
@@ -23,17 +23,62 @@ header {
       footer {
         background-color: #000000;
         height: 60px;
-        width: 99%;        
+        width: 100%;        
         /* margin-top: 233px; */
         display: flex;
         align-items: center;
         justify-content: center;      
-        position: absolute;
+        /* position: absolute; */
         bottom: 0;
+        /* position: fixed; */
         /* left: 0;
         right: 0; */
     }
     footer p {
         color: #f2f2f2;
+    }
+
+    .card{
+        background-color: #17923a;
+        width:350px;
+        height:350px;
+        position:relative;
+        margin:20px 20px ;
+        border-radius:20px;
+        float: left;
+    }
+    .card-img{
+        background-color:#fff;
+        width:60%;
+        height:60%;
+        
+        position:absolute;
+        top:25px;
+        left:70px;
+    }
+    .img-card{
+        height:80%;
+        width:80%;
+        position:absolute;
+        background:yellow;
+        top:10px;
+        left:20px;        
+    }        
+    .card-info{
+        position:absolute;
+        top: 235px;
+        left: 30px;      
+    }    
+    .about-me{
+        font-size:13px;
+        font-weight: bold;        
+    }    
+    .number{
+         position:absolute;
+         top:105px;
+         left:220px;
+    }
+    form fieldset input {
+        margin-left: 10px;
     }
     
