--- a/css/accounting.css
+++ b/css/accounting.css
@@ -38,3 +38,22 @@ header {
     footer p {
         color: #f2f2f2;
     }
+
+
+    table{
+    border: 1px solid #000000;
+    border-color: #000000; 
+    background-color: #EEEEEE;
+    width: 100%;
+    text-align: center ;
+    border-collapse: collapse;
+    }
+    table td {
+        border: 1px solid #000000;
+        padding: 3px 2px;
+    }
+    table th{
+        background: #17923a;
+        border: 1px solid #000000; 
+        padding: 3px 2px;
+    }
